--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "y",
   "scripts": {
     "test": "y",
-    "watch": "nodemon ./server"
+    "watch": "nodemon ./server",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
